--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="asset/Style/style.css">
 </head>
 <body>
+    <div class="container">
+        <h1>Tone Maker</h1>
+        <p>Welcome to the Tone Maker application! Here you can create and customize your own tones.</p>
+        <button id="createToneButton">Create New Tone</button>
+        <div id="toneList"></div>
+    </div>
+
+    <script src="asset/Script/script.js"></script>
     
 </body>
 </html>
