--- a/Index.html
+++ b/Index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tone Maker </title>
-    <link rel="stylesheet" href="asset/Style/style.css">
-</head>
-<body>
-    <div class="container">
-        <h1>Tone Maker</h1>
-        <p>Welcome to the Tone Maker application! Here you can create and customize your own tones.</p>
-        <button id="createToneButton">Create New Tone</button>
-        <div id="toneList"></div>
-    </div>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Tone Maker</title>
+        <link rel="stylesheet" href="asset/Style/style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        
+    </head>
+    <body>
+        <div class="container">
+            <h1>Tone Maker</h1>
+            <p>
+                Welcome to the Tone Maker application! Here you can create and
+                customize your own tones.
+            </p>
+            <button class="btn-contact">Contact</button>
+            <div id="toneList"></div>
+        </div>
 
-    <script src="asset/Script/script.js"></script>
-    
-</body>
+        <script src="asset/Script/script.js"></script>
+    </body>
 </html>
