boutton dégrader de merde finis sa grand mère

--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,6 @@
         <link rel="stylesheet" href="asset/Style/style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        
     </head>
     <body>
         <div class="container">
@@ -16,7 +15,10 @@
                 Welcome to the Tone Maker application! Here you can create and
                 customize your own tones.
             </p>
-            <button class="btn-contact">Contact</button>
+            <button class="btn-contact">
+                <span class="text-gradient">Contact</span>
+            </button>
+
             <div id="toneList"></div>
         </div>
 
