--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,18 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     </head>
+    <header>
+        <header>
+            <div class="input">
+                <button class="value">Magasin</button>
+                <button class="value">Produits</button>
+                <button class="value">Customisation</button>
+                <button class="value">Communauté</button>
+                <button class="value">Mon espace</button>
+            </div>
+        </header>
+    </header>
+
     <body>
         <div class="container">
             <h1>Tone Maker</h1>
