putain de Nav barre enfin fini

--- a/Index.html
+++ b/Index.html
@@ -10,30 +10,30 @@
     </head>
     <header>
         <header>
-            <div class="input">
-                <button class="value">Magasin</button>
-                <button class="value">Produits</button>
-                <button class="value">Customisation</button>
-                <button class="value">Communauté</button>
-                <button class="value">Mon espace</button>
+            <div class="navbar">
+                <!-- Bloc gauche -->
+                <div class="input nav-left">
+                    <img src="asset/Logo/logo_tone_maker.png" alt="Logo" />
+                    <span class="value">Tone Maker</span>
+                </div>
+
+                <!-- Bloc centre -->
+                <div class="input nav-center">
+                    <button class="value">Magasin et partenaires</button>
+                    <button class="value">Tout les produits</button>
+                    <button class="value">Customisation</button>
+                    <button class="value">Communauté</button>
+                    <button class="value">Mon espace</button>
+                </div>
+
+                <!-- Bloc droite -->
+                <div class="input nav-right">
+                    <button class="value">Profil</button>
+                    <button class="value">Mes commandes</button>
+                </div>
             </div>
         </header>
     </header>
 
-    <body>
-        <div class="container">
-            <h1>Tone Maker</h1>
-            <p>
-                Welcome to the Tone Maker application! Here you can create and
-                customize your own tones.
-            </p>
-            <button class="btn-contact">
-                <span class="text-gradient">Contact</span>
-            </button>
-
-            <div id="toneList"></div>
-        </div>
-
-        <script src="asset/Script/script.js"></script>
-    </body>
+    <body></body>
 </html>
