--- a/Index.html
+++ b/Index.html
@@ -35,5 +35,43 @@
         </header>
     </header>
 
-    <body></body>
+    <body>
+        <!-- Section du carrousel en arrière-plan -->
+        <section class="carousel-background">
+            <div class="carousel">
+                <img src="asset/IMG/page_slider/Rockeur.png" alt="Image 1" />
+                <img src="asset/IMG/page_slider/Débutant.png" alt="Image 2" />
+                <img src="asset/IMG/page_slider/Enfant.png" alt="Image 3" />
+                <img src="asset/IMG/page_slider/Tapping.png" alt="Image 1" />
+                <img
+                    src="asset/IMG/page_slider/Improvisateur.png"
+                    alt="Image 2"
+                />
+                <img
+                    src="asset/IMG/page_slider/Un peu de tout.png"
+                    alt="Image 3"
+                />
+                <img src="asset/IMG/page_slider/Reggae.png" alt="Image 1" />
+                <img src="asset/IMG/page_slider/folk.png" alt="Image 2" />
+                <img src="asset/IMG/page_slider/Métal.png" alt="Image 3" />
+                <img src="asset/IMG/page_slider/Rythmique.png" alt="Image 2" />
+                <img
+                    src="asset/IMG/page_slider/Compositeur.png"
+                    alt="Image 3"
+                />
+                <img src="asset/IMG/page_slider/Flamenco.png" alt="Image 3" />
+                <img src="asset/IMG/page_slider/Soliste.png" alt="Image 3" />
+            </div>
+        </section>
+
+        <!-- Ta navbar ici, intacte -->
+        <header class="navbar">
+            <!-- NE RIEN MODIFIER ICI -->
+        </header>
+
+        <!-- Autres sections de ta page -->
+        <section class="content">
+            <h2></h2>
+        </section>
+    </body>
 </html>
