--- a/Index.html
+++ b/Index.html
@@ -64,9 +64,19 @@
             </div>
         </section>
 
-        <!-- Autres sections de ta page -->
-        <section class="content">
-            <h2></h2>
-        </section>
+        <!-- Titre de la page -->
+       <section class="content">
+  <div class="content-inner">
+    <img
+      src="asset/texte transparent/Votre guitare_votre signature.png"
+      alt="Image 1"
+    />
+    <button class="cta-button">
+      <span class="heart">❤️</span>
+      <span class="cta-text">Révélez votre identité musicale</span>
+    </button>
+  </div>
+</section>
+
     </body>
 </html>
