page hero done avec le scroll

--- a/Index.html
+++ b/Index.html
@@ -65,18 +65,31 @@
         </section>
 
         <!-- Titre de la page -->
-       <section class="content">
-  <div class="content-inner">
-    <img
-      src="asset/texte transparent/Votre guitare_votre signature.png"
-      alt="Image 1"
-    />
-    <button class="cta-button">
-      <span class="heart">❤️</span>
-      <span class="cta-text">Révélez votre identité musicale</span>
-    </button>
-  </div>
-</section>
+        <section class="content">
+            <div class="content-inner">
+                <img
+                    src="asset/texte transparent/Votre guitare_votre signature.png"
+                    alt="Image 1"
+                />
+                <button class="cta-button">
+                    <span class="heart">❤️</span>
+                    <span class="cta-text"
+                        >Révélez votre identité musicale</span
+                    >
+                </button>
+            </div>
+        </section>
+        <!-- 🔽 CONTENU QUI SUIT -->
+        <main class="main-content">
+            <section class="logos">
+                <h2>Nos partenaires</h2>
+                <!-- ... -->
+            </section>
 
+            <section class="custom">
+                <h2>Personnalisez chaque détail</h2>
+                <!-- ... -->
+            </section>
+        </main>
     </body>
 </html>
