--- a/Index.html
+++ b/Index.html
@@ -82,8 +82,8 @@
         <!-- 🔽 CONTENU QUI SUIT -->
         <main class="main-content">
             <section class="logos">
-                <h2>Nos partenaires</h2>
-                <!-- ... -->
+            <img src="asset/IMG/Marques_partenaires/behringer.png" alt="Logos partenaires" />
+              
             </section>
 
             <section class="custom">
