--- a/Index.html
+++ b/Index.html
@@ -4,20 +4,25 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Tone Maker</title>
+
         <link rel="stylesheet" href="asset/Style/style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     </head>
-    <header>
+
+    <body>
         <header>
             <div class="navbar">
-                <!-- Bloc gauche -->
+                <!-- 🔽 Menu burger (affiché uniquement en mobile) -->
+                <button class="burger" aria-label="Menu mobile">&#9776;</button>
+
+                <!-- 🔽 Logo centré -->
                 <div class="input nav-left">
                     <img src="asset/Logo/logo_tone_maker.png" alt="Logo" />
                     <span class="value">Tone Maker</span>
                 </div>
 
-                <!-- Bloc centre -->
+                <!-- 🔽 Centre navigation (visible en desktop uniquement) -->
                 <div class="input nav-center">
                     <button class="value">Magasin et partenaires</button>
                     <button class="value">Tout les produits</button>
@@ -26,16 +31,13 @@
                     <button class="value">Mon espace</button>
                 </div>
 
-                <!-- Bloc droite -->
+                <!-- 🔽 Droite (profil + panier) -->
                 <div class="input nav-right">
                     <button class="value">Profil</button>
                     <button class="value">Mes commandes</button>
                 </div>
             </div>
         </header>
-    </header>
-
-    <body>
         <!-- Section du carrousel en arrière-plan -->
         <section class="carousel-background">
             <div class="carousel">
@@ -82,12 +84,38 @@
         <!-- 🔽 CONTENU QUI SUIT -->
         <main class="main-content">
             <section class="logos">
-            <img src="asset/IMG/Marques_partenaires/behringer.png" alt="Logos partenaires" />
-              
+                <img
+                    src="asset/IMG/Marques_partenaires/behringer.png"
+                    alt="Logos partenaires"
+                />
+                <img
+                    src="asset/IMG/Marques_partenaires/fender.png"
+                    alt="Logos partenaires"
+                />
+                <img
+                    src="asset/IMG/Marques_partenaires/gibson.png"
+                    alt="Logo partenaires"
+                />
+                <img
+                    src="asset/IMG/Marques_partenaires/harley_benton.png"
+                    alt="Logos partenaires"
+                />
+                <img
+                    src="asset/IMG/Marques_partenaires/roland.png"
+                    alt="Logos partenaires"
+                />
+                <img
+                    src="asset/IMG/Marques_partenaires/shure.png"
+                    alt="Logos partenaires"
+                />
+                <img
+                    src="asset/IMG/Marques_partenaires/yamaha.png"
+                    alt="Logos partenaires"
+                />
             </section>
 
             <section class="custom">
-                <h2>Personnalisez chaque détail</h2>
+                <h2></h2>
                 <!-- ... -->
             </section>
         </main>
