responsive logo, degrader carrousel

--- a/Index.html
+++ b/Index.html
@@ -12,17 +12,29 @@
 
     <body>
         <header>
+            <!-- ✅ Logo mobile centré (en dehors de .navbar) -->
+            <div class="mobile-logo">
+                <img
+                    src="asset/Logo/logo_tone_maker.png"
+                    alt="Logo Tone Maker"
+                />
+                <span class="logo-text"
+                    ><em>Tone</em> <strong>Maker</strong></span
+                >
+            </div>
+
+            <!-- ✅ Barre de navigation -->
             <div class="navbar">
                 <!-- 🔽 Menu burger (mobile uniquement) -->
                 <button class="burger" aria-label="Menu mobile">&#9776;</button>
 
-                <!-- 🔽 Logo centré -->
+                <!-- 🔽 Logo desktop (desktop uniquement) -->
                 <div class="input nav-left">
                     <img src="asset/Logo/logo_tone_maker.png" alt="Logo" />
                     <span class="value desktop-only">Tone Maker</span>
                 </div>
 
-                <!-- 🔽 Centre navigation (desktop uniquement) -->
+                <!-- 🔽 Navigation centre (desktop uniquement) -->
                 <div class="input nav-center desktop-only">
                     <button class="value">Magasin et partenaires</button>
                     <button class="value">Tout les produits</button>
@@ -31,26 +43,26 @@
                     <button class="value">Mon espace</button>
                 </div>
 
-                <!-- 🔽 Droite -->
+                <!-- 🔽 Icônes à droite -->
                 <div class="input nav-right">
-                    <!-- ✅ Desktop uniquement -->
+                    <!-- Desktop -->
                     <button class="value desktop-only">Profil</button>
                     <button class="value desktop-only">Mes commandes</button>
-
-                    <!-- ✅ Mobile uniquement -->
-                    <img
-                        class="icon-mobile-only"
-                        src="asset/icon/user.png"
-                        alt="Profil"
-                    />
-                    <img
-                        class="icon-mobile-only"
-                        src="asset/icon/cart.png"
-                        alt="Panier"
-                    />
                 </div>
             </div>
+
             <!-- 🔽 Menu mobile slide (masqué par défaut) -->
+            <!-- Mobile -->
+            <img
+                class="icon-mobile-only"
+                src="asset/icon/user.png"
+                alt="Profil"
+            />
+            <img
+                class="icon-mobile-only"
+                src="asset/icon/cart.png"
+                alt="Panier"
+            />
             <div class="mobile-menu" id="mobileMenu">
                 <div class="mobile-menu-content">
                     <div class="logo-section">
@@ -64,8 +76,8 @@
 
                     <nav class="mobile-nav-links">
                         <a href="#"
-                            ><img src="asset/icon/user regular.png" alt="" /> Mon
-                            espace</a
+                            ><img src="asset/icon/user regular.png" alt="" />
+                            Mon espace</a
                         >
                         <a href="#"
                             ><img src="asset/icon/shop.png" alt="" /> Magasin et
