--- a/Index.html
+++ b/Index.html
@@ -154,6 +154,15 @@
                     >
                 </button>
             </div>
+            <!-- 🔽 Bouton "Créer ma guitare" fixé en bas à droite -->
+            <div class="create-guitar-container">
+                <button class="create-guitar-button">
+                    <span class="text">Créer ma guitare</span>
+                    <img 
+                    src="asset/icon/Arrow Head.png"
+                    >
+                </button>
+            </div>
         </section>
         <!-- 🔽 CONTENU QUI SUIT -->
         <main class="main-content">
@@ -189,7 +198,7 @@
             </section>
 
             <section class="custom">
-                <h2></h2>
+                <h2>TEST</h2>
                 <!-- ... -->
             </section>
         </main>
